--- a/buildpack.toml
+++ b/buildpack.toml
@@ -3,7 +3,7 @@ api = "0.2"
 [buildpack]
   id = "com.anynines.buildpacks.rvm-go"
   name = "RVM Buildpack in Go"
-  version = "0.1.0"
+  version = "0.1.1"
 
 [metadata]
   include_files = ["bin/build","bin/detect","buildpack.toml"]
@@ -12,6 +12,7 @@ api = "0.2"
     uri = "https://get.rvm.io"
     default_rvm_version = "1.29.10"
     default_ruby_version = "2.7.1"
+    default_bundler_version = "2.1.4"
 
 [[stacks]]
   id = "io.buildpacks.stacks.bionic"
