Move default node version to buildpack configuration

--- a/test/fixtures/before/some_buildpack.toml
+++ b/test/fixtures/before/some_buildpack.toml
@@ -9,3 +9,4 @@ api = "0.2"
     uri = "https://get.rvm.io"
     default_rvm_version = "1.29.10"
     default_ruby_version = "2.7.1"
+    default_node_version = "12.*"
