--- a/buildpack.toml
+++ b/buildpack.toml
@@ -3,7 +3,7 @@ api = "0.2"
 [buildpack]
   id = "com.anynines.buildpacks.rvm-go"
   name = "RVM Buildpack in Go"
-  version = "0.1.3"
+  version = "0.1.4"
 
 [metadata]
   include_files = ["bin/build","bin/detect","buildpack.toml"]
@@ -13,6 +13,7 @@ api = "0.2"
     default_rvm_version = "1.29.10"
     default_ruby_version = "2.7.1"
     default_bundler_version = "2.1.4"
+    default_node_version = "12.*"
 
 [[stacks]]
   id = "io.buildpacks.stacks.bionic"
