from github.com/paketo-buildpacks/github-config.
Create `package.toml' file as a new requirement.
Update `buildpack.toml' as a new API requirement.

Create `.packit' file as a part of updating `scripts/'
Update `.gitignore' to skip all directories with binaries.

--- a/buildpack.toml
+++ b/buildpack.toml
@@ -6,7 +6,8 @@ api = "0.2"
   version = "0.1.14"
 
 [metadata]
-  include_files = ["bin/build","bin/detect","buildpack.toml"]
+  include-files = ["bin/build","bin/detect","buildpack.toml"]
+  pre-package = "./scripts/build.sh"
 
   [metadata.configuration]
     uri = "https://get.rvm.io"
