--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,8 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-bin*
-*.tgz
+/bin
+.DS_Store
+.idea
+/.bin
+/build
